feat: filter skills by publishing department
